--- a/client/modules/App/components/Footer/Footer.css
+++ b/client/modules/App/components/Footer/Footer.css
@@ -1,17 +1,21 @@
 .footer{
-  text-align: center;
-  padding: 56px 0;
-  background-size: cover;
+  padding: 100px 0;
+  max-width: 980px;
+  margin: auto;
+}
+
+.footer span{
+  font-size: 1.2em;
+  color: lightpink;
 }
 
 .footer p{
   margin: 0 0 8px 0;
   font-size: 14px;
-  color: #FFF;
+  color: lightgray;
 }
 
 .footer a{
-  color: #FFF;
   text-decoration: none;
   font-weight: 700;
 }
