--- a/client/modules/Recipe/components/RecipeQuickSearch/RecipeQuickSearch.css
+++ b/client/modules/Recipe/components/RecipeQuickSearch/RecipeQuickSearch.css
@@ -1,19 +1,10 @@
-.select{
-  min-width: 150px;
-  border: none;
-}
-
-.select .Select-control{
-  border:none;
-}
 .search-form{
   font-size: 3.2em;
-  font-weight: 500;
+  font-weight: 300;
 }
 
-.input-ingredient, .select-category{
-  color: #cd5551;
-  border: 0px solid #cd5551;
+.search-form input, select{
+  border-width: 0;
   border-bottom-width: 2px;
   width: 250px;
   font-size: 1em;
@@ -22,10 +13,24 @@
 }
 
 .select-category{
-  color: #76d8a7;
-  border-color: #76d8a7;
+  color: #EC4863;
+  border-color: #EC4863;
   width: 300px;
 }
+
+/*A73E5C*/
+
+.input-ingredient1{
+    color: #A73E5C;
+    border-color: #A73E5C;  
+}
+/*EC4863*/
+
+.input-ingredient2{
+    color: #A73E5C;
+    border-color: #A73E5C;    
+}
+/*FF733F*/
 
 .button-container{
   padding-top: 25px;
@@ -36,19 +41,13 @@
   border-radius: 10px;
   width: 150px;
   color: #FFF;
-  background-color: #E74C3C;
+  background-color: #EC4863;
   text-decoration: none;
   border: none;
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
-  box-shadow: 0 0 20px 0 rgba(0,0,0,.3);
-  font-weight: 900;
   text-align: center;
   cursor: pointer;
-}
-
-.recipe-search-button i{
-  margin-left: 1px;
 }
 
 @media (max-width: 767px){
