--- a/client/modules/App/components/Header/Header.css
+++ b/client/modules/App/components/Header/Header.css
@@ -1,75 +1,58 @@
-.big-content {
-  width: 100%;
+.header {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  height: 50px;
+  font-size: 15px;
+  box-shadow: inset 0 -1px 0 0px rgba(0, 0, 0, 0.1);
+}
+
+.header section {
   max-width: 980px;
   margin: auto;
-  padding: 64px 16px;
-  overflow: auto;
 }
 
-.small-content {
-  width: 100%;
-  max-width: 980px;
-  margin: auto;
-  overflow: auto;
-}
-
-.small-content h1 a {
-  text-decoration: none;
-  color: black;
-  font-weight: 900;
-  font-size: 50px;
-  margin: 20px;
-}
-
-
-.site-title {
-  font-weight: 900;
-  font-size: 90px;
-}
-
-.site-title a {
-  text-decoration: none;
-  color: black;
-}
-
-
-
-.subheader{
-  display: block;
-  font-size: 20px;
-  margin-left: 20px;
-}
-
-.add-post-button {
-  display: inline-block;
-  color: #FFF;
-  background: #990012;
-  padding: 8px 16px;
-  text-decoration: none;
-  border-radius: 1000px;
-  float: right;
-}
-
-.language-switcher {
-  /*background: rgba(0, 0, 0, 0.05);*/
-}
-
-.language-switcher ul {
+.header nav {
+  height: 50px;  
   max-width: 980px;
   list-style: none;
   margin: auto;
+  padding: 0;
+  float: left;
 }
 
-.language-switcher li {
+.header a {
   display: inline-block;
-  margin: 10px;
-  padding: 5px;
   cursor: pointer;
-  color: grey;
+  color: #aaa;  
+  height: 50px;
+  line-height: 50px;
+  margin: 0;
+  padding: 0;
+  margin-right: 1em;
+  font-size: 15px;
 }
+
+.header a.nav-home {
+  font-size: 27px;
+  margin-right: 2em;
+  color: #EC4863;
+  float: left;
+  text-decoration: none;
+}
+
+/* F46D8D */
 
 .selected {
   border-bottom: 1px solid #fff;
+}
+
+
+.logged-in {
+  float: right;
+}
+
+.logged-in i{
+  padding-right: 5px;
 }
 
 @media (max-width: 767px){
