--- a/client/modules/Recipe/pages/RecipeDetailPage/RecipeDetailPage.css
+++ b/client/modules/Recipe/pages/RecipeDetailPage/RecipeDetailPage.css
@@ -1,3 +1,19 @@
-.single-recipe{
-  text-align: center;
+.single-recipe h1 {
+  font-weight: 300;
+}
+
+.single-recipe p {
+  padding: 20px;
+}
+
+.single-recipe .categories {
+  color: #888;
+}
+
+.single-recipe h3 {
+  font-weight: 500;
+}
+
+.single-recipe table {
+  padding: 10px;
 }
