--- a/client/modules/Recipe/components/RecipeListItem/RecipeListItem.css
+++ b/client/modules/Recipe/components/RecipeListItem/RecipeListItem.css
@@ -9,7 +9,7 @@
 }
 
 .title{
-  font-size: 28px;
+  font-size: 30px;
 }
 
 .title a{
@@ -31,11 +31,6 @@
   margin: 15px 0 0;
 }
 
-.title{
-  font-size: 42px;
-  color: #454545;
-}
-
 .label{
   color: #888;
   margin-right: 10px;
@@ -45,4 +40,37 @@
   margin: 3px;
   font-weight: 500;
   color: black;
+}
+
+.text-wrapper {
+  display: inline-block;
+  max-width:70%;
+}
+
+.image-wrapper {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: inline-block;
+  margin-right: 25px; 
+}
+
+.image-wrapper img {
+  width: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 767px){
+  .image-wrapper {
+    display: none;
+  }
+
+  .title{
+    font-size: 25px;
+  }
+
+  .text-wrapper {
+    max-width:100%;
+  }
 }
