--- a/client/modules/Recipe/pages/RecipeDetailPage/RecipeDetailPage.css
+++ b/client/modules/Recipe/pages/RecipeDetailPage/RecipeDetailPage.css
@@ -17,3 +17,17 @@
 .single-recipe table {
   padding: 10px;
 }
+
+.image-wrapper {
+  height: 200px;
+  overflow: hidden;
+  border-radius: 20px;
+  border: 4px solid #EC4863;
+  margin-bottom: 25px;
+}
+
+.image-wrapper img {
+  width: 100%;
+  object-fit: contain;
+  transform: translateY(-30%);
+}
