--- a/client/modules/App/components/Header/Header.css
+++ b/client/modules/App/components/Header/Header.css
@@ -1,9 +1,10 @@
 .header {
-  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   height: 50px;
   font-size: 15px;
-  box-shadow: inset 0 -1px 0 0px rgba(0, 0, 0, 0.1);
+  display: none;
+  /*background: $flamingo;*/
+  /*box-shadow: 0px 25px 60px -5px rgba(0,0,0,0.7);*/
 }
 
 .header section {
