--- a/client/modules/Auth/components/SocialSignInButtons/SocialSignInButtons.css
+++ b/client/modules/Auth/components/SocialSignInButtons/SocialSignInButtons.css
@@ -1,27 +1,32 @@
 .facebook {
-  background:#3B5998;
+  color:#3B5998;
 }
 
 .google {
-  background: #dc4e41;
+  color: #dc4e41;
 }
 
 .twitter {
-  background: #00a5e5;
+  color: #3498db;
 }
 
 .social-sign-in {
-  color: white;
-  font-size: 1em;
   padding: .7rem;
   cursor: pointer;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 0px;
+  width: 30%;
+  text-align: center;
+  font-size: 3em;
+  transition: all 0.2s linear;
 }
 
-.social-sign-in i{
-  padding-right: .7rem;
+.social-sign-in > span{
+  margin-top: 5px;
+  font-size: 0.4em;
 }
 
-.accent {
-  font-weight: 500;
+.social-sign-in:hover{
+  color: grey;
 }
