--- a/client/main.css
+++ b/client/main.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background: #ECF0F1;
+  background: #FFF;
 	/*background: #fff url('./modules/App/gradient-background.jpg');*/
 	background-size: cover;
 	font-family: 'Roboto', sans-serif;
