Fixed layout to be responsive

--- a/client/modules/App/components/Menu/Menu.css
+++ b/client/modules/App/components/Menu/Menu.css
@@ -12,27 +12,26 @@
   flex: 1 0 0px;
   flex-direction: column;  
   padding: 25px 10px 25px 10px;
-  color: $ebonyclay;  
   /*border-top: 1px solid $ebonyclay;*/
   font-size: 1.5em;
   cursor: pointer;
   transition: all 0.1s linear;
 }
 
-.menu > a:nth-child(1) {
-  color: #15C2D2;
+.find {
+  color: $turquoise;
 }
 
-.menu > a:nth-child(2) {
-  color: #26C281;
+.create {
+  color: $green;
 }
 
-.menu > a:nth-child(3) {
-  color: #F4B350;
+.about {
+  color: $yellow;
 }
 
-.menu > a:nth-child(4) {
-  color: #FF7043;
+.user {
+  color: $pink;
 }
 
 .menu i {
