--- a/client/modules/App/components/Toolbar/Toolbar.css
+++ b/client/modules/App/components/Toolbar/Toolbar.css
@@ -18,6 +18,10 @@
   transition: all 0.2s linear;
 }
 
+.toolbar > #home {
+  display: none;
+}
+
 .toolbar > .logo {
   padding: 0;
   color: #F16767
@@ -31,21 +35,26 @@
   padding: 4px 5px 0 0;
 }
 
-.toolbar > a:nth-child(2) {
-  color: #15C2D2;
+.find {
+  color: $turquoise;
 }
 
-.toolbar > a:nth-child(3) {
-  color: #26C281;
+.create {
+  color: $green;
 }
 
-.toolbar > a:nth-child(4) {
-  color: #F4B350;
+#home {
+  color: $red;
 }
 
-.toolbar > a:nth-child(5) {
-  color: #FF7043;
+.about {
+  color: $yellow;
 }
+
+.user {
+  color: $pink;
+}
+
 
 .toolbar a > div {
 }
@@ -61,5 +70,16 @@
 @media (max-width: 700px) {
   .toolbar a {
     font-size: 1.2em;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
+
+  .toolbar > #home {
+    display: flex;
+  }
+  
+  .toolbar > .logo {
+    display: none;
+  } 
 }
