--- a/client/modules/Recipe/pages/RecipeCreationPage/RecipeCreationPage.css
+++ b/client/modules/Recipe/pages/RecipeCreationPage/RecipeCreationPage.css
@@ -2,3 +2,10 @@
   text-align: center;
   padding: 20px;
 }
+
+@media (max-width: 500px) {
+  .create {
+    width: 100%;
+    margin: 20px;
+  }
+}
